add real index.html and main.js

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
         <meta charset="utf-8">
         <title>R Minecraft Manager</title>
         <meta name="description" content="R Minecraft Manager">
+        <script type="text/javascript" src="js/main.js" defer></script>
     </head>
     <body>
         <main>
             <h1>R Minecraft Manager</h1>
+            <div>
+                <p>Server Status:</p>
+                <p id="status">Loading</p>
+            </div>
+            <div>
+                <input id="start-button" type="button" value="Start">
+                <input id="stop-button" type="button" value="Stop">
+            </div>
         </main>
     </body>
 </html>
